# AI-Mock-Interview

./: .replit  README.md  app.py  config.py  pyproject.toml  replit.md  requirements.txt
utils/: __init__.py  db.py  interview_engine.py  pdf_parser.py  voice.py
utils/utils/: email_service.py
